[tool.poetry]
name = "maple"
version = "0.1.0"
description = "A cute virtual companion"
authors = ["Mikanwolfe <mikanwolfe@nekox.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
